<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.3</version>
		<relativePath/>
		<!-- lookup parent from repository -->
	</parent>

	<!-- Identificación del proyecto -->
	<groupId>com.photoquince</groupId>
	<artifactId>photoquince-backend</artifactId>
	<version>0.0.1</version>
	<name>PhotoQuinceBackend</name>
	<description>API REST para la gestión de la landing page y el backoffice de PhotoQuince, un sistema de fotografía para quinceañeras.</description>

	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://github.com/AntRed1/api-person/blob/be9fb35d59c14c1d3fb5faa72360776199c06333/LICENSE.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>arojas</id>
			<name>Anthony J. Rojas Valdez</name>
			<email>anthonyatras@gmail.com</email>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/AntRed1/api-person.git</connection>
		<developerConnection>scm:git:ssh://git@github.com:AntRed1/api-person.git</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/AntRed1/api-person</url>
	</scm>

	<!-- Propiedades de Java -->
	<properties>
		<java.version>21</java.version>
	</properties>

	<!-- Dependencias -->
	<dependencies>

		<!-- Spring Boot Starter -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<!-- Spring Boot Actuator (monitorización) -->
		<!-- pring Boot Actuator for monitoring and management of the application -->
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<!-- Spring Data JPA (para interacción con la base de datos) -->
		<!-- Spring Boot Data JPA for database interactions using ORM -->
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- Validación de datos -->
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- Spring Boot Web (para exponer APIs REST) -->
		<!-- Spring Boot Web Starter for building RESTful APIs -->
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-mysql</artifactId>
		</dependency>

		<!-- Spring Boot DevTools to accelerate development by enabling hot-reloading -->
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- MySQL Connector for integration with MySQL databases -->
		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
		</dependency>

		<!-- Lombok to reduce boilerplate code for POJOs -->
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Testing -->
		<!-- Spring Boot Starter Test for testing support -->
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Security -->
		<!-- Spring Security for authentication and authorization mechanisms -->
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- Java JWT library for generating and verifying JWT tokens -->
		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
		<dependency>
			<groupId>com.auth0</groupId>
			<artifactId>java-jwt</artifactId>
			<version>4.4.0</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>SpringBoot_Libraries</id>
			<url>https://pkgs.dev.azure.com/devantrojas25/629d7092-6a24-4cd9-b1d2-3573118cc9ff/_packaging/SpringBoot_Libraries/maven/v1</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>azure_artifacts</id>
			<repositories>
				<repository>
					<id>SpringBoot_Libraries</id>
					<url>https://pkgs.dev.azure.com/devantrojas25/629d7092-6a24-4cd9-b1d2-3573118cc9ff/_packaging/SpringBoot_Libraries/maven/v1</url>
					<releases>
						<enabled>true</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</repository>
			</repositories>
			<build>
				<plugins>
					<!-- Plugin para Spring Boot -->
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<configuration>
							<!-- Excluir Lombok si es necesario -->
							<excludes>
								<exclude>
									<groupId>org.projectlombok</groupId>
									<artifactId>lombok</artifactId>
								</exclude>
							</excludes>
						</configuration>
					</plugin>
					<!-- Plugin para controlar la versión de Java -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>${java.version}</release>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>dev</id>
			<properties>
				<spring.profiles.active>dev</spring.profiles.active>
			</properties>
		</profile>
		<profile>
			<id>prod</id>
			<properties>
				<spring.profiles.active>prod</spring.profiles.active>
			</properties>
		</profile>
	</profiles>

</project>
